# nupic.research

./: .flake8  .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  pytorch  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_script.py
.circleci/: config.yml  pytest.ini
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  nupic.research.frameworks.pytorch.audio_transforms.rst  nupic.research.frameworks.pytorch.dataset_utils.rst  nupic.research.frameworks.pytorch.image_transforms.rst  nupic.research.frameworks.pytorch.model_utils.rst  nupic.research.frameworks.pytorch.models.mobilenetv1.rst  nupic.research.frameworks.pytorch.models.not_so_densenet.rst  nupic.research.frameworks.pytorch.models.resnet_models.rst  nupic.research.frameworks.pytorch.models.rst  nupic.research.frameworks.pytorch.rst  nupic.research.frameworks.pytorch.speech_commands_dataset.rst  nupic.research.frameworks.rst  nupic.research.rst  nupic.research.support.parse_config.rst  nupic.research.support.ray_utils.rst  nupic.research.support.rst
projects/: README.md
projects/ax/: README.md  ax_multi_objective_example.py  environment.yml  ray_ax_example.py
projects/backprop_structure/: README.md  charts.py  environment.yml  tables.py
projects/continuous_learning/: Correlation_experiments.ipynb  cl_utils.py  cont_speech_experiment.py  correlation_experiment.py  correlation_metrics.py  dend_kwinners.py  dend_layer_playground.ipynb  exp_lesparse.py  experiments.cfg  fb_sparsenet.py  pred_network.py  process_gsc_byclass.py  run_dendrite_experiment.py  sigopt_config.py  sigopt_config_duty_cycles.py  sigopt_dc_config_2.py  sigopt_test_exp.py  sparse_speech_experiment.py  sync_ec2_file.sh  sync_ec2_repo.sh  train_playground.py
projects/dendrites/: README.md  dendrite_segments.py
projects/dqn/: requirements.txt  run.py
projects/dynamic_sparse/: README.md  datasets.py  dsn_notes.tex  environment.yml  functions.py  layers.py  models.py  networks.py  requirements.txt  run_boosting.py  run_cnn.py  run_dsconv.py  run_gs_hebbian.py  run_sparse.py  run_test.py  self_pruning_sparse_cnn.ipynb  utils.py
projects/greedy_infomax/: README.md  codebase_comparison.py  compare_old_and_new_codebases.py  compare_old_and_new_codebases_gpu.py  debugging.py  local_run.py  new_model_testing.py  run.py  run_debug.py  sigopt_dense.sh  sigopt_onecycle_lr_sparse.sh  sigopt_sparse.sh
projects/gsc/: gsc_profile.py  mixins.py  parameters_table.py  run.py
projects/imagenet/: Leaning rate schedule.ipynb  create_imagenet_hdf5.py  experiments.py  experiments_base.py  experiments_composed_lr.py  experiments_custom_super.py  experiments_default.py  experiments_superconvergence.py  imagenet_experiment.py  imagenet_run.py  imagenet_tune.py  local_run.py  pytorch_quantize.py  quantize_weights_only.py  repair_onecyclelr_checkpoint.py  run.py
projects/l2_pooling/: capacity_test.py  continuous_location.py  convergence_activity.py  convergence_activity_paper.py  generate_figure.py  ideal_classifier_experiment.py  infer_hand_crafted_objects.py  multi_column.py  multi_column_convergence.py  multi_column_synapse_sampling.py  noise_convergence.py  noise_tolerance_l2.py  noise_tolerance_l2_l4.py  plot_capacity_result.py  single_column.py  single_column_sp.py  thing_debug.py  topology_experiments.py
projects/lightning/: environment.yml  run.py
projects/lsuv_weight_init/: weight_init_experiment.py  weight_init_run.py  wi_experiments.cfg
projects/mandp/: README.md  environment.yml  foliage-linear-autoencoder.ipynb
projects/meta_cl/: compute_sparsity_stats_per_layer.ipynb  experiment_classes.py  plot_metrics.py  run.py  sigopt_utils.py
projects/remove_batchnorm/: remove_batchnorm.py  simple_net.py
projects/rsm/: .gitignore  README.md  active_dendrite.py  active_dendrites.py  baseline_models.py  browser.py  experiments.cfg  graphviz.ipynb  hyperparam_analysis.ipynb  k_winners.py  lang_util.py  mnist_experiments.cfg  mnist_playground.ipynb  playground.ipynb  ptb_experiments.cfg  ray_user.yaml  requirements.txt  rsm.py  rsm_digits.py  rsm_experiment.py  rsm_predictor.py  rsm_ptb_predict.py  rsm_ray.py  rsm_samplers.py  rsm_sequences.py  stochastic_mnist_test.py  tf_logger_plus.py  util.py  viz_util.py
projects/sdr_math/: README.md  plot_effect_of_n.py  plot_numerical_results.py  scalar_sdrs.py  sdr_math_neuron_paper.ipynb
projects/set-model/: models.py  run_test.py
projects/sigopt/: sigopt_example.py  sigopt_util.py
projects/simple_example/: base.py  run_example.py  simple_example.py
projects/stochastic_connections/: README.md  plot_aggregated_accuracy_sparsity.py  plot_single_example_sparsification.py  plot_training.py  reparameterization_layers.py  run_gsc_experiment.py  run_l0_experiment.py  run_mnist.sh  run_mnist_experiment.py
projects/tensorflow/: environment.yml
projects/transformers/: README.md  analyze_all_hp_search.sh  bert_from_scratch.py  calculate_sparsity_param.py  constants.py  create_prunable_checkpoint.py  export_finetuning_hp_search_results.py  export_finetuning_results.py  export_model.py  finetuning_constants.py  finetuning_notes.md  finetuning_results.md  ft_results_to_files.sh  integrations.py  requirements.txt  results.md  rm_all_but_best_run.py  run.py  run.sh  run_args.py  run_functions.py  run_utils.py  train_tokenizer.py  utils_qa.py
projects/union_path_integration/: bof_sim.py  capacity_simulation.py  convergence_simulation.py  ideal_sim.py  infer_hand_crafted_objects.py  plot_aggregate_narrowing.py  plot_capacity.py  plot_capacity_heatmap.py  plot_capacity_trends.py  plot_comparison.py  plot_comparison_to_ideal.py  plot_convergence.py  plot_feature_distributions.py  plot_fixed_cells.py  plot_narrowing.py  plot_rhombus_narrowing.py  plot_summary.py  runGaussian_varyModuleSize_varyNumModules.sh  run_capacity_heatmap.py  run_capacity_trends.py  run_feature_distributions.py  run_summary.py
projects/vernon_continual/: run.py
projects/vernon_examples/: simple_example.py
projects/whydense/: README.md  (+5 more)
tests/: dummy_test.py  k_winners_mask_test.py
(+1435 files in other folders)
