[build-system]
requires = ['setuptools >= 42.0.0, < 58', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.domino
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra -n auto'
testpaths = [
    'tests',
    'packages/self_supervised_learning/tests',
    'packages/dendrites/tests',
    'packages/dynamic_sparse/tests',
    'packages/greedy_infomax/tests'
]
filterwarnings = [
    'ignore:.*:DeprecationWarning'
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_standard_library = 'posixpath'
known_first_party = ['nupic.research', 'nupic.bindings', 'nupic.torch',
                     'nupic.tensorflow']
known_third_party = ['elasticsearch', 'dotenv', 'torch', 'tensorflow', 'tabulate',
                     'tqdm', 'wandb', 'transformers', 'tokenizers', 'datasets',
                     'deepspeed', 'scipy', 'scikit-learn', 'seaborn', 'librosa',
                     'pytorch_lightning', 'pretrainedmodels', 'ax', 'ptitprince',
                     'sigopt', 'wandb', 'gym', 'prettytable', 'plotly', 'plyfile']
